Added inheritance to non party statics

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -1963,103 +1963,42 @@ Inheritance = SongText3PlayersDuetSingerP3
 X = 107
 Y = 540
 
-#Variable statics and texts for song-screen in sing- and partymode
-# There can be an unlimited Number of Statics and Texts, As long
-# as the numbers are in order.
-# Statics that are shown in PartyMode Only are Named_
-#        SongStaticParty[No]
-# Texts that are shown in PartyMode Only are Named_
-#        SongTextParty[No]
-# Statics that are shown in Normal Mode Only are Named_
-#        SongStaticNonParty[No]
-# Texts that are shown in Normal Mode Only are Named_
-#        SongTextNonParty[No]
-#Here are the ones for singmode
-
 [SongChessboardTextNonParty6]
-X = 30
+Inheritance = SongRouletteTextNonParty6
 Y = 15
-Color = White
-Font = 0
-Size = 60
-Text = SING_SONG_SELECTION
-Align = 0
 
-
-# Menu opens with [M]
 [SongChessboardStaticNonParty6]
+Inheritance = SongRouletteStaticNonParty6
 X = 200
-Y = 560
 W = 28
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardTextNonParty7]
+Inheritance = SongRouletteTextNonParty7
 X = 237
 Y = 562
-Z = 0.952
-Color = White
-Font = 0
 Size = 22
-Align = 0
-Text = SING_SONG_SELECTION_MENU
-Reflection = 0
-ReflectionSpacing = 13
 
-# The so famous search, shown with [J]
 [SongChessboardStaticNonParty7]
+Inheritance = SongRouletteStaticNonParty7
 X = 295
-Y = 560
 W = 28
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardTextNonParty8]
+Inheritance = SongRouletteTextNonParty8
 X = 331
 Y = 562
-Z = 0.952
-Color = White
-Font = 0
 Size = 22
-Align = 0
-Text = SONG_JUMPTO_DESC
-Reflection = 0
-ReflectionSpacing = 13
 
-# [P]laylist
 [SongChessboardStaticNonParty8]
+Inheritance = SongRouletteStaticNonParty8
 X = 465
-Y = 560
 W = 28
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 X = 501
 Y = 562
-Z = 0.952
-Color = White
-Font = 0
 Size = 22
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
-Reflection = 0
-ReflectionSpacing = 13
 
 #and these are the ones for partymode
 # NAVBAR for party
@@ -2408,102 +2347,26 @@ Inheritance = SongText3PlayersDuetSingerP2
 [SongCarouselText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
 
-#Variable statics and texts for song-screen in sing- and partymode
-# There can be an unlimited Number of Statics and Texts, As long
-# as the numbers are in order.
-# Statics that are shown in PartyMode Only are Named_
-#        SongStaticParty[No]
-# Texts that are shown in PartyMode Only are Named_
-#        SongTextParty[No]
-# Statics that are shown in Normal Mode Only are Named_
-#        SongStaticNonParty[No]
-# Texts that are shown in Normal Mode Only are Named_
-#        SongTextNonParty[No]
-#Here are the ones for singmode
-
 [SongCarouselTextNonParty6]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 60
-Text = SING_SONG_SELECTION
-Align = 0
+Inheritance = SongRouletteTextNonParty6
 
-# Menu opens with [M]
 [SongCarouselStaticNonParty6]
-X = 255
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty6
 
 [SongCarouselTextNonParty7]
-X = 287
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_MENU
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty7
 
-# The so famous search, shown with [J]
 [SongCarouselStaticNonParty7]
-X = 375
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty7
 
 [SongCarouselTextNonParty8]
-X = 407
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_JUMPTO_DESC
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty8
 
-# [P]laylist
 [SongCarouselStaticNonParty8]
-X = 580
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty8
 
 [SongCarouselTextNonParty9]
-X = 612
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty9
 
 #and these are the ones for partymode
 # NAVBAR for party
@@ -2974,101 +2837,48 @@ Inheritance = SongText3PlayersDuetSingerP3
 X = 372
 Y = 490
 
-#Variable statics and texts for song-screen in sing- and partymode
-# There can be an unlimited Number of Statics and Texts, As long
-# as the numbers are in order.
-# Statics that are shown in PartyMode Only are Named_
-#        SongStaticParty[No]
-# Texts that are shown in PartyMode Only are Named_
-#        SongTextParty[No]
-# Statics that are shown in Normal Mode Only are Named_
-#        SongStaticNonParty[No]
-# Texts that are shown in Normal Mode Only are Named_
-#        SongTextNonParty[No]
-#Here are the ones for singmode
-
 [SongSlotMachineTextNonParty6]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 60
-Text = SING_SONG_SELECTION
-Align = 0
+Inheritance = SongRouletteTextNonParty6
 
-
-# Menu opens with [M]
 [SongSlotMachineStaticNonParty6]
+Inheritance = SongRouletteStaticNonParty6
 X = 340
 Y = 545
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
 Reflection = 1
 ReflectionSpacing = 2
 
 [SongSlotMachineTextNonParty7]
+Inheritance = SongRouletteTextNonParty7
 X = 370
 Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_MENU
 Reflection = 1
 ReflectionSpacing = 13
 
-# The so famous search, shown with [J]
 [SongSlotMachineStaticNonParty7]
+Inheritance = SongRouletteStaticNonParty7
 X = 440
 Y = 545
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
 Reflection = 1
 ReflectionSpacing = 2
 
 [SongSlotMachineTextNonParty8]
+Inheritance = SongRouletteTextNonParty8
 X = 470
 Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_JUMPTO_DESC
 Reflection = 1
 ReflectionSpacing = 13
 
-# [P]laylist
 [SongSlotMachineStaticNonParty8]
+Inheritance = SongRouletteStaticNonParty8
 X = 630
 Y = 545
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
 Reflection = 1
 ReflectionSpacing = 2
 
 [SongSlotMachineTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 X = 660
 Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
 Reflection = 1
 ReflectionSpacing = 13
 
@@ -3475,102 +3285,26 @@ Inheritance = SongText3PlayersDuetSingerP2
 [SongSlideText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
 
-#Variable statics and texts for song-screen in sing- and partymode
-# There can be an unlimited Number of Statics and Texts, As long
-# as the numbers are in order.
-# Statics that are shown in PartyMode Only are Named_
-#        SongStaticParty[No]
-# Texts that are shown in PartyMode Only are Named_
-#        SongTextParty[No]
-# Statics that are shown in Normal Mode Only are Named_
-#        SongStaticNonParty[No]
-# Texts that are shown in Normal Mode Only are Named_
-#        SongTextNonParty[No]
-#Here are the ones for singmode
-
 [SongSlideTextNonParty6]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 60
-Text = SING_SONG_SELECTION
-Align = 0
+Inheritance = SongRouletteTextNonParty6
 
-# Menu opens with [M]
 [SongSlideStaticNonParty6]
-X = 255
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty6
 
 [SongSlideTextNonParty7]
-X = 287
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_MENU
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty7
 
-# The so famous search, shown with [J]
 [SongSlideStaticNonParty7]
-X = 375
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty7
 
 [SongSlideTextNonParty8]
-X = 407
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_JUMPTO_DESC
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty8
 
-# [P]laylist
 [SongSlideStaticNonParty8]
-X = 580
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty8
 
 [SongSlideTextNonParty9]
-X = 612
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty9
 
 #and these are the ones for partymode
 [SongSlideStaticParty1]
@@ -4110,103 +3844,30 @@ Inheritance = SongText3PlayersDuetSingerP3
 X = 650
 Y = 175
 
-#Variable statics and texts for song-screen in sing- and partymode
-# There can be an unlimited Number of Statics and Texts, As long
-# as the numbers are in order.
-# Statics that are shown in PartyMode Only are Named_
-#        SongStaticParty[No]
-# Texts that are shown in PartyMode Only are Named_
-#        SongTextParty[No]
-# Statics that are shown in Normal Mode Only are Named_
-#        SongStaticNonParty[No]
-# Texts that are shown in Normal Mode Only are Named_
-#        SongTextNonParty[No]
-#Here are the ones for singmode
-
 [SongListTextNonParty6]
+Inheritance = SongRouletteTextNonParty6
 X = 40
 Y = 12
-Color = White
-Font = 0
-Size = 60
-Text = SING_SONG_SELECTION
-Align = 0
-
-# Menu opens with [M]
 
 [SongListStaticNonParty6]
-X = 255
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty6
 
 [SongListTextNonParty7]
-X = 287
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_MENU
+Inheritance = SongRouletteTextNonParty7
 Reflection = 1
 ReflectionSpacing = 13
 
-# The so famous search, shown with [J]
 [SongListStaticNonParty7]
-X = 375
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty7
 
 [SongListTextNonParty8]
-X = 407
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_JUMPTO_DESC
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty8
 
-# [P]laylist
 [SongListStaticNonParty8]
-X = 580
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty8
 
 [SongListTextNonParty9]
-X = 612
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty9
 
 #and these are the ones for partymode
 [SongListStaticParty1]
@@ -4726,103 +4387,30 @@ Inheritance = SongText3PlayersDuetSingerP3
 X = 642
 Y = 185
 
-#Variable statics and texts for song-screen in sing- and partymode
-# There can be an unlimited Number of Statics and Texts, As long
-# as the numbers are in order.
-# Statics that are shown in PartyMode Only are Named_
-#        SongStaticParty[No]
-# Texts that are shown in PartyMode Only are Named_
-#        SongTextParty[No]
-# Statics that are shown in Normal Mode Only are Named_
-#        SongStaticNonParty[No]
-# Texts that are shown in Normal Mode Only are Named_
-#        SongTextNonParty[No]
-#Here are the ones for singmode
-
 [SongMosaicTextNonParty6]
+Inheritance = SongRouletteTextNonParty6
 X = 40
 Y = 12
-Color = White
-Font = 0
-Size = 60
-Text = SING_SONG_SELECTION
-Align = 0
-
-# Menu opens with [M]
 
 [SongMosaicStaticNonParty6]
-X = 255
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty6
 
 [SongMosaicTextNonParty7]
-X = 287
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_MENU
+Inheritance = SongRouletteTextNonParty7
 Reflection = 1
 ReflectionSpacing = 13
 
-# The so famous search, shown with [J]
 [SongMosaicStaticNonParty7]
-X = 375
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty7
 
 [SongMosaicTextNonParty8]
-X = 407
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_JUMPTO_DESC
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty8
 
-# [P]layList
 [SongMosaicStaticNonParty8]
-X = 580
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongRouletteStaticNonParty8
 
 [SongMosaicTextNonParty9]
-X = 612
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
-Reflection = 0
-ReflectionSpacing = 13
+Inheritance = SongRouletteTextNonParty9
 
 #and these are the ones for partymode
 [SongMosaicStaticParty1]
