Added inheritance to medley list

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -1561,6 +1561,14 @@ Font=1
 Size=20
 Align=1
 
+[SongRouletteTextMedleyNumber2]
+Inheritance = SongRouletteTextMedleyNumber1
+Y=420
+
+[SongRouletteTextMedleyNumber3]
+Inheritance = SongRouletteTextMedleyNumber1
+Y=465
+
 [SongRouletteTextMedleyArtist1]
 X=50
 Y=366
@@ -1569,63 +1577,26 @@ Font=0
 Size=20
 Align=0
 
-[SongRouletteTextMedleyTitle1]
-X=50
-Y=383
-Color=White
-Font=0
-Size=20
-Align=0
-
-[SongRouletteTextMedleyNumber2]
-X=27
-Y=420
-Color=White
-Font=1
-Size=20
-Align=1
-
 [SongRouletteTextMedleyArtist2]
-X=50
+Inheritance = SongRouletteTextMedleyArtist1
 Y=411
-Color=ColorDark
-Font=0
-Size=20
-Align=0
-
-[SongRouletteTextMedleyTitle2]
-X=50
-Y=428
-Color=White
-Font=0
-Size=20
-Align=0
-
-[SongRouletteTextMedleyNumber3]
-X=27
-Y=465
-Color=White
-Font=1
-Size=20
-Align=1
 
 [SongRouletteTextMedleyArtist3]
-X=50
+Inheritance = SongRouletteTextMedleyArtist1
 Y=454
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+
+[SongRouletteTextMedleyTitle1]
+Inheritance = SongRouletteTextMedleyArtist1
+Y=383
+Color=White
+
+[SongRouletteTextMedleyTitle2]
+Inheritance = SongRouletteTextMedleyTitle1
+Y=428
 
 [SongRouletteTextMedleyTitle3]
-X=50
+Inheritance = SongRouletteTextMedleyTitle1
 Y=471
-Color=White
-Font=0
-Size=20
-Align=0
-
-
 
 [SongRouletteStaticMedley1]
 Tex = PlayerNumberBox
@@ -1637,24 +1608,12 @@ Color = ColorDark
 Type = Colorized
 
 [SongRouletteStaticMedley2]
-Tex = PlayerNumberBox
-X = 15
+Inheritance = SongRouletteStaticMedley1
 Y = 415
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongRouletteStaticMedley3]
-Tex = PlayerNumberBox
-X = 15
+Inheritance = SongRouletteStaticMedley1
 Y = 460
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
-
-
 
 ########################################################################################
 ##### 																			   #####
@@ -2095,81 +2054,44 @@ Font = 1
 Size = 20
 Align = 1
 
-#############################
-##                         ##
-##     Medley Playlist     ##
-##                         ##
-#############################
-
 [SongChessboardTextMedleyMax]
 N = 2
 
 [SongChessboardTextMedleyNumber1]
+Inheritance = SongRouletteTextMedleyNumber1
 X=215
 Y=485
-Color=White
-Font=1
-Size=20
-Align=1
-
-[SongChessboardTextMedleyArtist1]
-X=237
-Y=480
-Color=ColorDark
-Font=0
-Size=20
-Align=0
-
-[SongChessboardTextMedleyTitle1]
-X=237
-Y=495
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongChessboardTextMedleyNumber2]
-X=215
+Inheritance = SongChessboardTextMedleyNumber1
 Y=525
-Color=White
-Font=1
-Size=20
-Align=1
+
+[SongChessboardTextMedleyArtist1]
+Inheritance = SongRouletteTextMedleyArtist1
+X=237
+Y=480
 
 [SongChessboardTextMedleyArtist2]
-X=237
+Inheritance = SongChessboardTextMedleyArtist1
 Y=515
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+
+[SongChessboardTextMedleyTitle1]
+Inheritance = SongRouletteTextMedleyTitle1
+X=237
+Y=495
 
 [SongChessboardTextMedleyTitle2]
-X=237
+Inheritance = SongChessboardTextMedleyTitle1
 Y=530
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongChessboardStaticMedley1]
-Tex = PlayerNumberBox
+Inheritance = SongRouletteStaticMedley1
 X = 203
 Y = 480
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongChessboardStaticMedley2]
-Tex = PlayerNumberBox
-X = 203
+Inheritance = SongChessboardStaticMedley1
 Y = 520
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
-
 
 ########################################################################################
 ##### 																			   #####
@@ -2459,114 +2381,44 @@ Font = 1
 Size = 20
 Align = 1
 
-#############################
-##                         ##
-##     Medley Playlist     ##
-##                         ##
-#############################
-
 [SongCarouselTextMedleyMax]
 N = 3
 
 [SongCarouselTextMedleyNumber1]
-X=27
-Y=375
-Color=White
-Font=1
-Size=20
-Align=1
+Inheritance = SongRouletteTextMedleyNumber1
 
 [SongCarouselTextMedleyArtist1]
-X=50
-Y=366
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyArtist1
 
 [SongCarouselTextMedleyTitle1]
-X=50
-Y=383
-Color=White
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyTitle1
 
 [SongCarouselTextMedleyNumber2]
-X=27
-Y=420
-Color=White
-Font=1
-Size=20
-Align=1
+Inheritance = SongRouletteTextMedleyNumber2
 
 [SongCarouselTextMedleyArtist2]
-X=50
-Y=411
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyArtist2
 
 [SongCarouselTextMedleyTitle2]
-X=50
-Y=428
-Color=White
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyTitle2
 
 [SongCarouselTextMedleyNumber3]
-X=27
-Y=465
-Color=White
-Font=1
-Size=20
-Align=1
+Inheritance = SongRouletteTextMedleyNumber3
 
 [SongCarouselTextMedleyArtist3]
-X=50
-Y=454
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyArtist3
 
 [SongCarouselTextMedleyTitle3]
-X=50
-Y=471
-Color=White
-Font=0
-Size=20
-Align=0
-
+Inheritance = SongRouletteTextMedleyTitle3
 
 [SongCarouselStaticMedley1]
-Tex = PlayerNumberBox
-X = 15
-Y = 370
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
+Inheritance = SongRouletteStaticMedley1
 
 [SongCarouselStaticMedley2]
-Tex = PlayerNumberBox
-X = 15
-Y = 415
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
+Inheritance = SongRouletteStaticMedley2
 
 [SongCarouselStaticMedley3]
-Tex = PlayerNumberBox
-X = 15
-Y = 460
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
+Inheritance = SongRouletteStaticMedley3
 
 ########################################################################################
 ##### 																			   #####
@@ -2973,113 +2825,59 @@ Font = 1
 Size = 20
 Align = 1
 
-#############################
-##                         ##
-##     Medley Playlist     ##
-##                         ##
-#############################
-
 [SongSlotMachineTextMedleyMax]
 N = 3
 
 [SongSlotMachineTextMedleyNumber1]
+Inheritance = SongRouletteTextMedleyNumber1
 X=275
 Y=79
-Color=White
-Font=1
-Size=20
-Align=1
-
-[SongSlotMachineTextMedleyArtist1]
-X=295
-Y=72
-Color=ColorDark
-Font=0
-Size=20
-Align=0
-
-[SongSlotMachineTextMedleyTitle1]
-X=295
-Y=86
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongSlotMachineTextMedleyNumber2]
-X=275
+Inheritance = SongSlotMachineTextMedleyNumber1
 Y=115
-Color=White
-Font=1
-Size=20
-Align=1
-
-[SongSlotMachineTextMedleyArtist2]
-X=295
-Y=107
-Color=ColorDark
-Font=0
-Size=20
-Align=0
-
-[SongSlotMachineTextMedleyTitle2]
-X=295
-Y=122
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongSlotMachineTextMedleyNumber3]
-X=275
+Inheritance = SongSlotMachineTextMedleyNumber1
 Y=151
-Color=White
-Font=1
-Size=20
-Align=1
+
+[SongSlotMachineTextMedleyArtist1]
+Inheritance = SongRouletteTextMedleyArtist1
+X=295
+Y=72
+
+[SongSlotMachineTextMedleyArtist2]
+Inheritance = SongSlotMachineTextMedleyArtist1
+Y=107
 
 [SongSlotMachineTextMedleyArtist3]
-X=295
+Inheritance = SongSlotMachineTextMedleyArtist1
 Y=141
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+
+[SongSlotMachineTextMedleyTitle1]
+Inheritance = SongSlotMachineTextMedleyArtist1
+Y=86
+
+[SongSlotMachineTextMedleyTitle2]
+Inheritance = SongSlotMachineTextMedleyTitle1
+Y=122
 
 [SongSlotMachineTextMedleyTitle3]
-X=295
+Inheritance = SongSlotMachineTextMedleyTitle1
 Y=156
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongSlotMachineStaticMedley1]
-Tex = PlayerNumberBox
+Inheritance = SongRouletteStaticMedley1
 X = 263
 Y = 74
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongSlotMachineStaticMedley2]
-Tex = PlayerNumberBox
-X = 263
+Inheritance = SongSlotMachineStaticMedley1
 Y = 110
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongSlotMachineStaticMedley3]
-Tex = PlayerNumberBox
-X = 263
+Inheritance = SongSlotMachineStaticMedley1
 Y = 146
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
 
 ########################################################################################
 ##### 																			   #####
@@ -3437,116 +3235,44 @@ Font = 1
 Size = 20
 Align = 1
 
-#############################
-##                         ##
-##     Medley Playlist     ##
-##                         ##
-#############################
-
 [SongSlideTextMedleyMax]
 N = 3
 
 [SongSlideTextMedleyNumber1]
-X=27
-Y=375
-Color=White
-Font=1
-Size=20
-Align=1
+Inheritance = SongRouletteTextMedleyNumber1
 
 [SongSlideTextMedleyArtist1]
-X=50
-Y=366
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyArtist1
 
 [SongSlideTextMedleyTitle1]
-X=50
-Y=383
-Color=White
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyTitle1
 
 [SongSlideTextMedleyNumber2]
-X=27
-Y=420
-Color=White
-Font=1
-Size=20
-Align=1
+Inheritance = SongRouletteTextMedleyNumber2
 
 [SongSlideTextMedleyArtist2]
-X=50
-Y=411
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyArtist2
 
 [SongSlideTextMedleyTitle2]
-X=50
-Y=428
-Color=White
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyTitle2
 
 [SongSlideTextMedleyNumber3]
-X=27
-Y=465
-Color=White
-Font=1
-Size=20
-Align=1
+Inheritance = SongRouletteTextMedleyNumber3
 
 [SongSlideTextMedleyArtist3]
-X=50
-Y=454
-Color=ColorDark
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyArtist3
 
 [SongSlideTextMedleyTitle3]
-X=50
-Y=471
-Color=White
-Font=0
-Size=20
-Align=0
+Inheritance = SongRouletteTextMedleyTitle3
 
 [SongSlideStaticMedley1]
-Tex = PlayerNumberBox
-X = 15
-Y = 370
-W = 25
-H = 30
-Z = 1
-Color = ColorDark
-Type = Colorized
+Inheritance = SongRouletteStaticMedley1
 
 [SongSlideStaticMedley2]
-Tex = PlayerNumberBox
-X = 15
-Y = 415
-W = 25
-H = 30
-Z = 1
-Color = ColorDark
-Type = Colorized
+Inheritance = SongRouletteStaticMedley2
 
 [SongSlideStaticMedley3]
-Tex = PlayerNumberBox
-X = 15
-Y = 460
-W = 25
-H = 30
-Color = ColorDark
-Type = Colorized
-
+Inheritance = SongRouletteStaticMedley3
 
 ########################################################################################
 ##### 																			   #####
@@ -4002,113 +3728,62 @@ Font = 1
 Size = 20
 Align = 1
 
-#############################
-##                         ##
-##     Medley Playlist     ##
-##                         ##
-#############################
-
 [SongListTextMedleyMax]
 N = 3
 
 [SongListTextMedleyNumber1]
+Inheritance = SongRouletteTextMedleyNumber1
 X=543
 Y=100
-Color=White
-Font=1
 Size=18
-Align=1
-
-[SongListTextMedleyArtist1]
-X=565
-Y=91
-Color=ColorDark
-Font=0
-Size=18
-Align=0
-
-[SongListTextMedleyTitle1]
-X=565
-Y=108
-Color=White
-Font=0
-Size=18
-Align=0
 
 [SongListTextMedleyNumber2]
-X=543
+Inheritance = SongListTextMedleyNumber1
 Y=145
-Color=White
-Font=1
-Size=18
-Align=1
-
-[SongListTextMedleyArtist2]
-X=565
-Y=136
-Color=ColorDark
-Font=0
-Size=18
-Align=0
-
-[SongListTextMedleyTitle2]
-X=565
-Y=153
-Color=White
-Font=0
-Size=18
-Align=0
 
 [SongListTextMedleyNumber3]
-X=543
+Inheritance = SongListTextMedleyNumber1
 Y=190
-Color=White
-Font=1
+
+[SongListTextMedleyArtist1]
+Inheritance = SongRouletteTextMedleyArtist1
+X=565
+Y=91
 Size=18
-Align=1
+
+[SongListTextMedleyArtist2]
+Inheritance = SongListTextMedleyArtist1
+Y=136
 
 [SongListTextMedleyArtist3]
-X=565
+Inheritance = SongListTextMedleyArtist1
 Y=181
-Color=ColorDark
-Font=0
-Size=18
-Align=0
+
+[SongListTextMedleyTitle1]
+Inheritance = SongListTextMedleyArtist1
+Y=108
+
+[SongListTextMedleyTitle2]
+Inheritance = SongListTextMedleyTitle1
+Y=153
 
 [SongListTextMedleyTitle3]
-X=565
+Inheritance = SongListTextMedleyTitle1
 Y=198
-Color=White
-Font=0
-Size=18
-Align=0
 
 [SongListStaticMedley1]
-Tex = PlayerNumberBox
+Inheritance = SongRouletteStaticMedley1
 X = 532
 Y = 95
 W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongListStaticMedley2]
-Tex = PlayerNumberBox
-X = 532
+Inheritance = SongListStaticMedley1
 Y = 140
-W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongListStaticMedley3]
-Tex = PlayerNumberBox
-X = 532
+Inheritance = SongListStaticMedley1
 Y = 185
-W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 ########################################################################################
 ##### 																			   #####
@@ -4545,147 +4220,77 @@ Font = 1
 Size = 20
 Align = 1
 
-#############################
-##                         ##
-##     Medley Playlist     ##
-##                         ##
-#############################
-
 [SongMosaicTextMedleyMax]
 N = 4
 
 [SongMosaicTextMedleyNumber1]
+Inheritance = SongRouletteTextMedleyNumber1
 X=548
 Y=111
-Color=White
-Font=1
-Size=20
-Align=1
 
 [SongMosaicTextMedleyNumber2]
-X=548
+Inheritance = SongMosaicTextMedleyNumber1
 Y=156
-Color=White
-Font=1
-Size=20
-Align=1
 
 [SongMosaicTextMedleyNumber3]
-X=548
+Inheritance = SongMosaicTextMedleyNumber1
 Y=201
-Color=White
-Font=1
-Size=20
-Align=1
 
 [SongMosaicTextMedleyNumber4]
-X=548
+Inheritance = SongMosaicTextMedleyNumber1
 Y=246
-Color=White
-Font=1
-Size=20
-Align=1
 
 [SongMosaicTextMedleyArtist1]
+Inheritance = SongRouletteTextMedleyArtist1
 X=570
 Y=102
-Color=ColorDark
-Font=0
-Size=20
-Align=0
 
 [SongMosaicTextMedleyArtist2]
-X=570
+Inheritance = SongMosaicTextMedleyArtist1
 Y=146
-Color=ColorDark
-Font=0
-Size=20
-Align=0
 
 [SongMosaicTextMedleyArtist3]
-X=570
+Inheritance = SongMosaicTextMedleyArtist1
 Y=192
-Color=ColorDark
-Font=0
-Size=20
-Align=0
 
 [SongMosaicTextMedleyArtist4]
-X=570
+Inheritance = SongMosaicTextMedleyArtist1
 Y=237
-Color=ColorDark
-Font=0
-Size=20
-Align=0
-
 
 [SongMosaicTextMedleyTitle1]
+Inheritance = SongRouletteTextMedleyTitle1
 X=570
 Y=118
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongMosaicTextMedleyTitle2]
-X=570
+Inheritance = SongMosaicTextMedleyTitle1
 Y=163
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongMosaicTextMedleyTitle3]
-X=570
+Inheritance = SongMosaicTextMedleyTitle1
 Y=208
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongMosaicTextMedleyTitle4]
-X=570
+Inheritance = SongMosaicTextMedleyTitle1
 Y=252
-Color=White
-Font=0
-Size=20
-Align=0
 
 [SongMosaicStaticMedley1]
-Tex = PlayerNumberBox
+Inheritance = SongRouletteStaticMedley1
 X = 537
 Y = 105
 W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongMosaicStaticMedley2]
-Tex = PlayerNumberBox
-X = 537
+Inheritance = SongMosaicStaticMedley1
 Y = 150
-W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongMosaicStaticMedley3]
-Tex = PlayerNumberBox
-X = 537
+Inheritance = SongMosaicStaticMedley1
 Y = 195
-W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 [SongMosaicStaticMedley4]
-Tex = PlayerNumberBox
-X = 537
+Inheritance = SongMosaicStaticMedley1
 Y = 240
-W = 24
-H = 30
-Color = ColorDark
-Type = Colorized
 
 ##########################################
 ######### S I N G   S C R E E N ##########
