Added option to avoid finding medley if is unset. This can speed up a bit the songs loading.

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -14369,40 +14369,47 @@ Text = SING_OPTIONS_GAME
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_LANGUAGE
 Y = 130
+W = 280
+SBGW = 370
 
 [OptionsGameSelectSongMenu]
-Inheritance = OptionsSelectSlide
+Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SONGMENU
-Y = 180
+Y = 175
 
 [OptionsGameSelectDuets]
-Inheritance = OptionsSelectSlide
+Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_DUETS
-Y = 230
+Y = 220
 
 [OptionsGameSelectTabs]
-Inheritance = OptionsSelectSlide
+Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_TABS
-Y = 280
+Y = 265
 
 [OptionsGameSelectSlideSorting]
-Inheritance = OptionsSelectSlide
+Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SORTING
-Y = 330
+Y = 310
 
 [OptionsGameSelectShowScores]
-Inheritance = OptionsSelectSlide
+Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SHOWSCORES
-Y = 380
+Y = 355
+
+[OptionsGameSelectFindUnsetMedley]
+Inheritance = OptionsGameSelectSlideLanguage
+Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
+Y = 400
 
 [OptionsGameSelectJoypad]
-Inheritance = OptionsSelectSlide
+Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_JOYPAD_SUPPORT
-Y = 430
+Y = 445
 
 [OptionsGameButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 480
+Y = 490
 
 [OptionsGameButtonExitText1]
 Inheritance = OptionsButtonExit2Text
@@ -14508,48 +14515,44 @@ Color = White
 Size = 45
 Text = SING_OPTIONS_SOUND
 
-[OptionsSoundSelectSlide]
-Inheritance = OptionsSelectSlide
-H = 35
-
 [OptionsSoundSelectVoicePassthrough]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_VOICEPASSTHROUGH
 Y = 130
 
 [OptionsSoundSelectBackgroundMusic]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_BACKGROUNDMUSIC
-Y = 170
+Y = 175
 
 [OptionsSoundSelectClickAssist]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_CLICK_ASSIST
-Y = 210
+Y = 220
 
 [OptionsSoundSelectBeatClick]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_BEAT_CLICK
-Y = 250
+Y = 265
 
 [OptionsSoundSelectSlideMusicAutoGain]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_MUSICAUTOGAIN
-Y = 290
+Y = 310
 
 [OptionsSoundSelectSlidePreviewVolume]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_PREVIEWVOLUME
-Y = 330
+Y = 355
 
 [OptionsSoundSelectSlidePreviewFADING]
-Inheritance = OptionsSoundSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_PREVIEWFADING
-Y = 370
+Y = 400
 
 [OptionsSoundButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 410
+Y = 445
 
 [OptionsSoundButtonExitText1]
 Inheritance = OptionsButtonExit2Text
