Reordered player selection screen items to add a button to change to the next screen and a full mouse support. Added too the R keyboard interaction to select a random avatar.

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -197,8 +197,8 @@ Tex  = MainBG
 
 #write your name
 [NameStatic1]
-X = 30
-Y = 400
+X = 400
+Y = 125
 W = 200
 H = 35
 Tex = MainBar
@@ -233,17 +233,14 @@ Size = 26
 Text = SING_PLAYER_READY
 
 [NameText3]
-X = 50
-Y = 350
-Color = White
-Font = 1
-Size = 26
+Inheritance = NameText2
+X = 400
 Align = 0
 Text = SING_PLAYER_EDIT
 
 [NameText4]
-X = 50
-Y = 405
+X = 420
+Y = 130
 Color = White
 Font = 0
 Size = 22
@@ -260,33 +257,21 @@ Text = SING_PLAYER_NAME
 #Text = SING_PLAYER_AVATAR
 
 [NameSelectPlayerCount]
+Inheritance = OptionsSelectSlide
 Text = SING_PLAYER_COUNT
-Tex = MainBar
-Type = Transparent
-TexSBG = SelectBG
-TypeSBG = Transparent
-X = 30
-Y = 265
-W = 200
+X = 50
+Y = 125
+W = 205
 H = 35
-Size=5
-SkipX = 30
-SBGW = 160
-Align = 0
+Size = 5
+SBGW = 70
 TextSize = 22
-DColor =
-Color =
-TColor = White
-TDColor = White
-
 SBGDColor = ColorDark
 SBGColor = ColorLight
-STColor = White
-STDColor = GrayDark
 
 [NamePlayerSelectStatic1]
-X = 101
-Y = 120
+X = 60
+Y = 170
 W = 66
 H = 88
 Tex = AvatarFrame2
@@ -295,8 +280,8 @@ Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic1Text]
-X = 133
-Y = 211
+X = 92
+Y = 261
 Font = 1
 Size = 16
 Align = 1
@@ -304,8 +289,8 @@ Color = White
 Z = 1
 
 [NamePlayerSelectStatic1Avatar]
-X = 108
-Y = 127
+X = 67
+Y = 177
 W = 51
 H = 72
 Z = 1
@@ -313,171 +298,100 @@ Tex = NoAvatar_P1
 Type = Transparent
 
 [NamePlayerSelectStatic2]
-X = 202
-Y = 120
-W = 66
-H = 88
-Tex = AvatarFrame2
+Inheritance = NamePlayerSelectStatic1
+X = 160
 Color = P2Dark
-Type = Colorized
-Z = 1
 
 [NamePlayerSelectStatic2Text]
-X = 235
-Y = 211
-Font = 1
-Size = 16
-Align = 1
-Color = White
+Inheritance = NamePlayerSelectStatic1Text
+X = 192
 Text = P2
-Z = 1
 
 [NamePlayerSelectStatic2Avatar]
-X = 209
-Y = 127
-W = 51
-H = 72
-Z = 1
+Inheritance = NamePlayerSelectStatic1Avatar
+X = 167
 Tex = NoAvatar_P2
-Type = Transparent
 
 [NamePlayerSelectStatic3]
-X = 312
-Y = 120
-W = 66
-H = 88
-Tex = AvatarFrame2
+Inheritance = NamePlayerSelectStatic1
+X = 260
 Color = P3Dark
-Type = Colorized
-Z = 1
 
 [NamePlayerSelectStatic3Text]
-X = 344
-Y = 211
-Font = 1
-Size = 16
-Align = 1
-Color = White
+Inheritance = NamePlayerSelectStatic1Text
+X = 292
 Text = P3
-Z = 1
 
 [NamePlayerSelectStatic3Avatar]
-X = 319
-Y = 127
-W = 51
-H = 72
-Z = 1
+Inheritance = NamePlayerSelectStatic1Avatar
+X = 267
 Tex = NoAvatar_P3
-Type = Transparent
 
 [NamePlayerSelectStatic4]
-X = 418
-Y = 120
-W = 66
-H = 88
-Tex = AvatarFrame2
-Color = P4Dark
-Type = Colorized
-Z = 1
+Inheritance = NamePlayerSelectStatic1
+Y = 300
 
 [NamePlayerSelectStatic4Text]
-X = 451
-Y = 211
-Font = 1
-Size = 16
-Align = 1
-Color = White
+Inheritance = NamePlayerSelectStatic1Text
+Y = 389
 Text = P4
-Z = 1
 
 [NamePlayerSelectStatic4Avatar]
-X = 425
-Y = 127
-W = 51
-H = 72
-Z = 1
+Inheritance = NamePlayerSelectStatic1Avatar
+Y = 307
 Tex = NoAvatar_P4
-Type = Transparent
 
 [NamePlayerSelectStatic5]
-X = 524
-Y = 120
-W = 66
-H = 88
-Tex = AvatarFrame2
+Inheritance = NamePlayerSelectStatic4
+X = 160
 Color = P5Dark
-Type = Colorized
-Z = 1
 
 [NamePlayerSelectStatic5Text]
-X = 557
-Y = 211
-Font = 1
-Size = 16
-Align = 1
-Color = White
+Inheritance = NamePlayerSelectStatic4Text
+X = 192
 Text = P5
-Z = 1
 
 [NamePlayerSelectStatic5Avatar]
-X = 531
-Y = 127
-W = 51
-H = 72
-Z = 1
+Inheritance = NamePlayerSelectStatic4Avatar
+X = 167
 Tex = NoAvatar_P5
-Type = Transparent
 
 [NamePlayerSelectStatic6]
-X = 630
-Y = 120
-W = 66
-H = 88
-Tex = AvatarFrame2
+Inheritance = NamePlayerSelectStatic4
+X = 260
 Color = P6Dark
-Type = Colorized
-Z = 1
 
 [NamePlayerSelectStatic6Text]
-X = 662
-Y = 211
-Font = 1
-Size = 16
-Align = 1
-Color = White
+Inheritance = NamePlayerSelectStatic4Text
+X = 292
 Text = P6
-Z = 1
 
 [NamePlayerSelectStatic6Avatar]
-X = 637
-Y = 127
-W = 51
-H = 72
-Z = 1
+Inheritance = NamePlayerSelectStatic4Avatar
+X = 267
 Tex = NoAvatar_P6
-Type = Transparent
 
 [NamePlayerSelectCurrent]
-X = 0
-Y = 120
-W = 67
-H = 130
+X = -10
+W = 85
+H = 122
 Z = 0.95
 Tex = SelectFrame
-Color = ColorDark
-DColor = White
+Color = ColorLight
+DColor = ColorLightest
 Type = Transparent
 
 [NamePlayerAvatar]
 X = 560
-Y = 421
+Y = 281
 W = 67
 H = 90
-Reflection = 0
+Reflection = 1
+ReflectionSpacing = 10
 
 [NamePlayerButtonAvatar]
 X = 541
-Y = 403
+Y = 263
 W = 107
 H = 124
 Tex = AvatarFrame
@@ -486,13 +400,13 @@ DColor = ColorLight
 Type = Transparent
 
 [NamePlayerScrollAvatar]
-Count = 3
+Count = 5
 Distance = 40
 
 [NamePlayerButtonName]
-X = 260
-Y = 400
-W = 160
+X = 610
+Y = 125
+W = 150
 H = 35
 Z = 1
 Tex = Button
@@ -502,7 +416,7 @@ Type = Transparent
 Texts = 1
 
 [NamePlayerButtonNameText1]
-X = 80
+X = 75
 Y = 5
 Font = 0
 Size = 22
@@ -510,51 +424,45 @@ Align = 1
 Color = White
 
 [NameSelectPlayerColor]
+Inheritance = OptionsSelectSlide
 Text= SING_PLAYER_COLOR
-Tex = MainBar
-TexSBG = SelectBG
-Type = Transparent
-TypeSBG = Transparent
-X = 30
-Y = 445
+X = 400
+Y = 170
 W = 200
 H = 35
-Size=5
-SkipX = 30
-SBGW = 160
+Size = 5
+SBGW = 150
+Align = 0
 TextSize = 22
-DColor =
-Color =
-TColor = White
-TDColor = White
 SBGDColor = PlayerDark
 SBGColor = PlayerLight
-STColor = White
-STDColor = GrayDark
 
 [NameSelectPlayerLevel]
+Inheritance = NameSelectPlayerColor
 Text = SING_PLAYER_LEVEL
-Tex = MainBar
+Y = 215
+
+[NamePlayerSingButton]
+X = 275
+Y = 450
+W = 250
+H = 100
+Tex = Button
+Color = ColorDark
+Int = 1
+DColor = ColorLight
+DInt = 0.1
 Type = Transparent
-TexSBG = SelectBG
-Type = Transparent
-TypeSBG = Transparent
-X = 30
-Y = 490
-W = 200
-H = 35
-Size=5
-SkipX = 30
-SBGW = 160
-TextSize = 22
-DColor =
-Color =
-TColor = White
-TDColor = White
-SBGDColor = PlayerDark
-SBGColor = PlayerLight
-STColor = White
-STDColor = GrayDark
+Texts = 1
+
+[NamePlayerSingButtonText1]
+X = 125
+Y = 25
+Color = White
+Size = 50
+Font = 0
+Align = 1
+Text = SING_SING
 
 #########################################
 #####  S O N G   S E L E C T I O N  #####
