Update font for special characters

--- a/game/fonts/fonts.ini
+++ b/game/fonts/fonts.ini
@@ -66,3 +66,23 @@ File=Roboto/Roboto-Bold.ttf
 MaxResolution=256
 PreCache=0
 Outline=0.02
+
+[Fallbacks]
+File=NotoSans/NotoSans-Regular.ttf
+File1=NotoSans/NotoSansArabic-Regular.ttf
+File2=NotoSans/NotoSansArmenian-Regular.ttf
+File3=NotoSans/NotoSansBengali-Regular.ttf
+File4=NotoSans/NotoSansCJK-Regular.ttc
+File5=NotoSans/NotoSansDevanagari-Regular.ttf
+File6=NotoSans/NotoSansGeorgian-Regular.ttf
+File7=NotoSans/NotoSansGujarati-Regular.ttf
+File8=NotoSans/NotoSansGurmukhi-Regular.ttf
+File9=NotoSans/NotoSansHebrew-Regular.ttf
+File10=NotoSans/NotoSansKannada-Regular.ttf
+File11=NotoSans/NotoSansLao-Regular.ttf
+File12=NotoSans/NotoSansMalayalam-Regular.ttf
+File13=NotoSans/NotoSansMyanmar-Regular.ttf
+File14=NotoSans/NotoSansOriya-Regular.ttf
+File15=NotoSans/NotoSansTamil-Regular.ttf
+File16=NotoSans/NotoSansTelugu-Regular.ttf
+File17=NotoSans/NotoSansThai-Regular.ttf
